# docs/swagger.json
@@ -31,7 +31,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/userdto.UserPublicDTO"
+                                "$ref": "#/definitions/userdto.PrivateDTO"
                             }
                         }
                     }
@@ -51,7 +51,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/userdto.UserPrivateDTO"
+                            "$ref": "#/definitions/userdto.PrivateDTO"
                         }
                     }
                 }
@@ -74,7 +74,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/userdto.UserUpdateRequest"
+                            "$ref": "#/definitions/userdto.UpdateRequest"
                         }
                     }
                 ],
@@ -82,7 +82,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/userdto.UserPrivateDTO"
+                            "$ref": "#/definitions/userdto.PrivateDTO"
                         }
                     }
                 }
@@ -99,14 +99,19 @@
                 "summary": "用户列表-分页",
                 "parameters": [
                     {
+                        "minimum": 1,
                         "type": "integer",
                         "name": "page",
-                        "in": "query"
+                        "in": "query",
+                        "required": true
                     },
                     {
+                        "maximum": 100,
+                        "minimum": 1,
                         "type": "integer",
                         "name": "pageSize",
-                        "in": "query"
+                        "in": "query",
+                        "required": true
                     },
                     {
                         "type": "string",
@@ -118,7 +123,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/v1.PageResponse"
+                            "$ref": "#/definitions/userdto.UserPageResponse"
                         }
                     }
                 }
@@ -144,7 +149,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/userdto.LoginRequest"
+                            "$ref": "#/definitions/userdto.CreateRequest"
                         }
                     }
                 ],
@@ -177,7 +182,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/userdto.LoginRequest"
+                            "$ref": "#/definitions/userdto.CreateRequest"
                         }
                     }
                 ],
@@ -185,7 +190,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/userdto.UserPrivateDTO"
+                            "$ref": "#/definitions/userdto.PrivateDTO"
                         }
                     }
                 }
@@ -213,7 +218,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/userdto.UserPublicDTO"
+                            "$ref": "#/definitions/userdto.PrivateDTO"
                         }
                     }
                 }
@@ -247,7 +252,7 @@
         }
     },
     "definitions": {
-        "userdto.LoginRequest": {
+        "userdto.CreateRequest": {
             "type": "object",
             "required": [
                 "password",
@@ -255,9 +260,11 @@
             ],
             "properties": {
                 "password": {
+                    "description": "密码",
                     "type": "string"
                 },
                 "username": {
+                    "description": "用户名",
                     "type": "string"
                 }
             }
@@ -266,69 +273,94 @@
             "type": "object",
             "properties": {
                 "token": {
+                    "description": "token",
                     "type": "string"
                 },
                 "user": {
-                    "$ref": "#/definitions/userdto.UserPrivateDTO"
+                    "description": "用户信息",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/userdto.PrivateDTO"
+                        }
+                    ]
                 }
             }
         },
-        "userdto.UserPrivateDTO": {
+        "userdto.PrivateDTO": {
             "type": "object",
             "properties": {
                 "avatar": {
+                    "description": "头像",
                     "type": "string"
                 },
                 "email": {
+                    "description": "邮箱",
                     "type": "string"
                 },
                 "id": {
+                    "description": "ID",
                     "type": "integer"
                 },
                 "phone": {
+                    "description": "手机号",
                     "type": "string"
                 },
                 "username": {
+                    "description": "用户名",
                     "type": "string"
                 }
             }
         },
-        "userdto.UserPublicDTO": {
+        "userdto.PublicDTO": {
             "type": "object",
             "properties": {
                 "avatar": {
+                    "description": "头像",
                     "type": "string"
                 },
                 "id": {
+                    "description": "ID",
                     "type": "integer"
                 },
                 "username": {
+                    "description": "用户名",
                     "type": "string"
                 }
             }
         },
-        "userdto.UserUpdateRequest": {
+        "userdto.UpdateRequest": {
             "type": "object",
             "properties": {
                 "avatar": {
+                    "description": "头像",
                     "type": "string"
                 },
                 "username": {
+                    "description": "用户名",
                     "type": "string"
                 }
             }
         },
-        "v1.PageResponse": {
+        "userdto.UserPageResponse": {
             "type": "object",
             "properties": {
-                "data": {},
+                "data": {
+                    "description": "列表",
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/userdto.PublicDTO"
+                    }
+                },
                 "page": {
+                    "description": "页码",
                     "type": "integer"
                 },
                 "pageSize": {
+                    "description": "条数",
                     "type": "integer"
                 },
                 "total": {
+                    "description": "总数",
                     "type": "integer"
                 }
             }
