# internal/dto/user/convert.go
@@ -4,26 +4,24 @@ import "go-server/internal/model"
 
 // ================= DTO 转换 =================
 
-// 👉 他人可见
-func ToPublicDTO(u *model.User) PrivateDTO {
-	return PrivateDTO{
+// 他人可见
+func ToPublicDTO(u *model.User) PublicDTO {
+	return PublicDTO{
 		ID:       u.ID,
 		Username: u.Username,
 		Avatar:   u.Avatar,
 	}
 }
 
-// 👉 自己可见
+// 自己可见
 func ToPrivateDTO(u *model.User) PrivateDTO {
 	return PrivateDTO{
-		ID:       u.ID,
-		Username: u.Username,
-		Avatar:   u.Avatar,
+		PublicDTO: ToPublicDTO(u),
 	}
 }
 
-func ListToPublic(users []model.User) []PrivateDTO {
-	list := make([]PrivateDTO, 0, len(users))
+func ListToPublic(users []model.User) []PublicDTO {
+	list := make([]PublicDTO, 0, len(users))
 	for _, u := range users {
 		list = append(list, ToPublicDTO(&u))
 	}
